packages/CodeStyle/Annotate/tests/valid/NamespaceDeclarationWithoutUseStatement.php
<?php

namespace Foo;


class Bar
{

	public function foo()
	{
		$bar = NULL;
		return function () use ($bar) {};
	}

}
