packages/CodeStyle/Annotate/tests/invalid/MethodVisibilityInClass.php
<?php

namespace Foo;


class Bar
{

	function foo()
	{
	}

}
